# connect-rust

./: .changie.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  Taskfile.yaml
.changes/: 0.2.0.md  0.2.1.md  0.3.0.md  0.3.1.md  0.3.2.md  0.3.3.md  0.4.0.md  0.4.1.md  0.4.2.md  0.5.0.md  0.6.0.md  0.6.1.md  0.7.0.md  0.8.0.md  0.8.1.md  header.tpl.md
.changes/unreleased/: Added-20260712-110850.yaml  Added-20260717-153147.yaml  Added-20260720-134339.yaml  Added-20260723-023643.yaml  Changed-20260706-155026.yaml  Changed-20260709-102954.yaml  Changed-20260717-163730.yaml  Changed-20260717-173621.yaml  Changed-20260723-223805.yaml  Fixed-20260706-203937.yaml  Fixed-20260708-203246.yaml  Fixed-20260709-051015.yaml  Fixed-20260721-100959.yaml  Fixed-20260721-130128.yaml  Fixed-20260723-222229.yaml  Fixed-20260723-222329.yaml  Fixed-20260723-222414.yaml  Fixed-20260723-224245.yaml  Removed-20260723-222641.yaml
.github/workflows/: ci.yml  cla.yaml
benches/rpc/: Cargo.toml  README.md
benches/rpc/benches/: cross_impl_bench.rs  echo_bloat.rs  filter_handler.rs  rpc_bench.rs  view_rope_encode.rs
benches/rpc/src/: filter.rs  lib.rs
connectrpc/: Cargo.toml
connectrpc-build/: Cargo.toml
connectrpc-build/src/: lib.rs
connectrpc-codegen/: Cargo.toml
connectrpc-codegen/src/: codegen.rs  comments.rs  lib.rs
connectrpc-health/: Cargo.toml  buf.gen.yaml  buf.yaml
connectrpc-health/proto/grpc/health/v1/: health.proto
connectrpc-health/src/: checker.rs  lib.rs  service.rs  static_checker.rs  status.rs
connectrpc-reflection/: Cargo.toml
connectrpc-reflection/src/: reflector.rs  service.rs
connectrpc/src/: axum.rs  codec.rs  compression.rs  deadline.rs  dispatcher.rs  envelope.rs  error.rs  handler.rs  interceptor.rs  lib.rs  payload.rs  protocol.rs  request.rs  response.rs  router.rs  server.rs  service.rs  spec.rs  stream_message.rs  test_budget.rs
connectrpc/src/client/: http2.rs  mod.rs
docs/: guide.md
examples/bazel/: Cargo.toml
examples/eliza/src/: client.rs  main.rs
examples/middleware/: README.md
examples/middleware/src/: client.rs  server.rs
examples/middleware/tests/: e2e.rs
examples/mtls-identity/: Cargo.toml  README.md  build.rs
examples/mtls-identity/proto/anthropic/connectrpc/mtls_identity/v1/: identity.proto
examples/mtls-identity/src/: lib.rs  main.rs
examples/mtls-identity/tests/: e2e.rs
examples/multiservice/proto/anthropic/connectrpc/wkt/v1/: wkt.proto
examples/streaming-tour/: README.md
examples/streaming-tour/src/: client.rs  server.rs
examples/streaming-tour/tests/: e2e.rs
examples/wasm-client/src/: lib.rs  transport.rs
signatures/: README.md  cla.json
tests/streaming/src/: lib.rs
