[package]
name = "connectrpc"
version = "0.8.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A Tower-based Rust implementation of the ConnectRPC protocol"
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core HTTP types (framework-agnostic)
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Tower service abstraction (the foundation)
tower = { workspace = true }

# Async runtime (minimal features for core). `macros` is load-bearing for
# `tokio::select!` in the `server` accept loop; it stays on the base
# dependency because CI's `--all-targets` would hide its removal via
# dev-dep unification while breaking downstream `server`-only builds.
tokio = { workspace = true, features = ["rt", "io-util", "sync", "time", "macros"] }
futures = { workspace = true }
pin-project = { workspace = true }
sync_wrapper = { workspace = true }
async-trait = { workspace = true }

# Protobuf.
# Declared directly (not `workspace = true`) so the `json` feature can gate
# `buffa/json`: the workspace `buffa` entry forces `features = ["json"]`, which
# a member inheriting it cannot drop. The runtime only ever uses buffa's core
# `Message`/view traits (never its JSON helpers), so a proto-only build needs
# no buffa JSON. `std` is kept explicitly — `default-features = false` drops it
# along with `json`, but `connectrpc` is unconditionally a std crate (tokio,
# hyper), so building buffa as no_std would buy nothing and only risk a future
# buffa change std-gating a core path we rely on. `fast-utf8` is kept
# explicitly for the same reason: it is in buffa's default set (validated
# string decoding on the hot path), and `default-features = false` would
# silently drop it. Keep the version in sync with the
# `[workspace.dependencies]` `buffa` entry, which documents why the floor is
# where it is.
buffa = { version = "0.9.1", default-features = false, features = ["std", "fast-utf8"] }

# Serialization. Non-optional even in proto-only builds: the Connect error and
# streaming end-of-stream wire frames are always JSON regardless of the message
# codec, so `serde`/`serde_json` are always required. The `json` feature gates
# only *message-type* JSON (see `JsonSerialize`/`JsonDeserialize`).
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Compression (optional)
flate2 = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

# Streaming compression (optional)
async-compression = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["codec", "io"] }

# Error handling
thiserror = { workspace = true }

# Utilities
percent-encoding = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }

# Optional: Hyper (for server and/or client)
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }

# Optional: Axum integration
axum = { workspace = true, optional = true }

# OS error codes for transient error handling
libc = { workspace = true, optional = true }

# Tower middleware for panic handling
tower-http = { workspace = true, optional = true, features = ["catch-panic"] }

# TLS (optional)
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
hyper-rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = { workspace = true }
rcgen = { workspace = true }
buffa-types = { workspace = true }
h2 = { workspace = true }

[features]
default = ["gzip", "zstd", "streaming", "json"]

# JSON codec for protobuf message types. On by default. Disabling it drops the
# `serde::Serialize`/`DeserializeOwned` requirement on message types (see
# `JsonSerialize`/`JsonDeserialize`), so proto-only code generated with the
# codegen `no_json` option compiles against this crate. The Connect *error*
# wire format is always JSON, so `serde`/`serde_json` remain unconditional
# dependencies; only message-level JSON support is gated.
json = ["buffa/json"]

# Compression algorithms
gzip = ["dep:flate2", "async-compression?/gzip"]
zstd = ["dep:zstd", "async-compression?/zstd"]
streaming = ["dep:async-compression"]

# Standalone hyper-based server (convenience feature)
server = [
    "hyper/server",
    "hyper/http1",
    "hyper/http2",
    "hyper-util/server",
    "hyper-util/server-auto",
    "hyper-util/server-graceful",
    "hyper-util/tokio",
    "hyper-util/http1",
    "hyper-util/http2",
    "dep:hyper",
    "dep:hyper-util",
    "dep:libc",
    "dep:tower-http",
    "tokio/net",
]

# HTTP client with connection pooling
client = [
    "hyper/client",
    "hyper/http1",
    "hyper/http2",
    "hyper-util/client",
    "hyper-util/client-legacy",
    "hyper-util/tokio",
    "hyper-util/http1",
    "hyper-util/http2",
    "dep:hyper",
    "dep:hyper-util",
    "tokio/net",
]

# TLS support for the built-in server (Server::with_tls)
server-tls = ["dep:rustls", "dep:tokio-rustls", "server"]

# TLS support for the HTTP client transports (HttpClient::with_tls,
# Http2Connection::connect_tls/lazy_tls)
client-tls = [
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:hyper-rustls",
    "dep:rustls-pki-types",
    "client",
]

# Convenience meta-feature: enable both server and client TLS
tls = ["server-tls", "client-tls"]

# Framework integrations
axum = ["dep:axum"]

# On wasm32 there is no tokio runtime, so the request-body
# reader for client-streaming / bidi is dispatched via
# `wasm_bindgen_futures::spawn_local` instead of `tokio::spawn`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[lints]
workspace = true
