# Standalone manifest for the Bazel example. Excluded from the connectrpc-rs
# workspace via the empty [workspace] table below — this is a Bazel-only
# crate that should not be part of the cargo workspace build.
[workspace]

[package]
name = "connectrpc-bazel-example-deps"
version = "0.0.0"
edition = "2021"
# Kept in sync with the workspace rust-version by hand: this manifest is
# standalone (excluded from the workspace) so it cannot inherit it.
rust-version = "1.88"
publish = false

# crates_universe needs a [package] target. We point at a stub source so
# `cargo metadata` (and crates_universe by extension) can resolve the
# dependency graph from this manifest.
[lib]
path = "stub.rs"

[dependencies]
buffa = { version = "0.8.1", features = ["json"] }
connectrpc = { version = "0.8.0", default-features = false, features = ["server", "client"] }
futures = "0.3"
http-body = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
